--- a/1_first_steps.ipynb
+++ b/1_first_steps.ipynb
@@ -10,12 +10,12 @@
    },
    "source": [
     "<figure>\n",
-    "  <IMG SRC=\"input/TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
+    "  <IMG SRC=\"input/FAU.png\" WIDTH=250 ALIGN=\"right\">\n",
     "</figure>\n",
     "\n",
     "# First Steps in Python 3\n",
     "    \n",
-    "*David B. Blumenthal, Olga Lazareva*"
+    "*David B. Blumenthal, Suryadipto Sarkar*"
    ]
   },
   {
@@ -33,14 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "prostate-exclusion",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello world!')"
    ]
@@ -60,14 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "growing-newport",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "30\n",
+      "7776\n",
+      "1.2\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(6 + 5)  # Addition\n",
     "print(6 * 5)  # Multiplication\n",
@@ -94,14 +115,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "pharmaceutical-ferry",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "a = 6         # Initialize and declare variable a.\n",
     "print(a / 3)  # Divide a by 3.\n",
@@ -188,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "instructional-shannon",
    "metadata": {
     "slideshow": {
@@ -236,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "behavioral-partition",
    "metadata": {
     "slideshow": {
@@ -324,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "id": "effective-compensation",
    "metadata": {
     "slideshow": {
@@ -447,7 +477,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-de187f088c88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms_1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'4'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m s_1[\u001b[38;5;241m4\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m4\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -519,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "id": "computational-serum",
    "metadata": {
     "slideshow": {
@@ -580,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "id": "extra-change",
    "metadata": {
     "slideshow": {
@@ -628,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "unlike-german",
    "metadata": {
     "slideshow": {
@@ -643,7 +673,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-b3f1c91a4aa0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'new'\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m# Cannot add item to tuple.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "Input \u001b[0;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mt_1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnew\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
      ]
     }
@@ -678,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "id": "cognitive-example",
    "metadata": {
     "scrolled": true,
@@ -789,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "id": "olympic-image",
    "metadata": {
     "slideshow": {
@@ -838,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "id": "likely-visibility",
    "metadata": {
     "slideshow": {
@@ -887,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "knowing-instrument",
    "metadata": {
     "slideshow": {
@@ -940,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "id": "pressed-weight",
    "metadata": {
     "slideshow": {
@@ -980,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "id": "joined-lighter",
    "metadata": {
     "slideshow": {
@@ -1069,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 23,
    "id": "tribal-desktop",
    "metadata": {
     "slideshow": {
@@ -1109,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 24,
    "id": "given-portland",
    "metadata": {
     "slideshow": {
@@ -1158,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "dominant-elements",
    "metadata": {
     "slideshow": {
@@ -1250,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "trying-meeting",
    "metadata": {
     "slideshow": {
@@ -1263,8 +1293,8 @@
      "output_type": "stream",
      "text": [
       "[True, False, True, False, True, False, True, False]\n",
-      "{'0': True, '1': False, '2': True, '3': False, '4': True, '5': False, '6': True, '7': False, '8': True, '9': False}\n",
-      "{0, 1, 2, 3, 4}\n"
+      "{'0': False, '1': True, '2': False, '3': True, '4': False, '5': True, '6': False, '7': True, '8': False, '9': True}\n",
+      "[True, False, True, False, True, False, True, False]\n"
      ]
     }
    ],
@@ -1308,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "alive-strap",
    "metadata": {
     "scrolled": true,
@@ -1353,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "id": "automatic-shadow",
    "metadata": {
     "slideshow": {
@@ -1464,14 +1494,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dying-progressive",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-13382.0\n"
+     ]
+    }
+   ],
    "source": [
     "x = 50\n",
     "a_0 = 3\n",
@@ -1507,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "id": "sexual-guyana",
    "metadata": {
     "slideshow": {
@@ -1553,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "id": "according-management",
    "metadata": {
     "slideshow": {
@@ -1565,7 +1603,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1010110\n"
+      "1001000\n"
      ]
     }
    ],
@@ -1605,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "id": "grateful-asian",
    "metadata": {
     "slideshow": {
@@ -1665,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "electric-return",
    "metadata": {
     "slideshow": {
@@ -1718,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "id": "inappropriate-machine",
    "metadata": {
     "slideshow": {
@@ -1770,7 +1808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
