--- a/2_data_handling.ipynb
+++ b/2_data_handling.ipynb
@@ -10,12 +10,12 @@
    },
    "source": [
     "<figure>\n",
-    "  <IMG SRC=\"input/TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
+    "  <IMG SRC=\"input/FAU.png\" WIDTH=250 ALIGN=\"right\">\n",
     "</figure>\n",
     "\n",
     "# Data Handling and Scientific Computing in Python 3\n",
     "    \n",
-    "*David B. Blumenthal, Olga Lazareva*"
+    "*David B. Blumenthal, Suryadipto Sarkar*"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "american-career",
    "metadata": {
     "slideshow": {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "resident-malaysia",
    "metadata": {
     "slideshow": {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "continued-appeal",
    "metadata": {
     "slideshow": {
@@ -459,7 +459,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.62 ms ± 62.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2.57 ms ± 146 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "comparable-ordering",
    "metadata": {
     "slideshow": {
@@ -482,7 +482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46.5 µs ± 5.88 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "52.4 µs ± 25.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "regular-league",
    "metadata": {
     "slideshow": {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "second-courage",
    "metadata": {
     "slideshow": {
@@ -543,7 +543,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.69 ms ± 109 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "3.09 ms ± 161 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "id": "blessed-tribune",
    "metadata": {
     "slideshow": {
@@ -570,7 +570,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.12 ms ± 82 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "1.45 ms ± 140 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "intellectual-airfare",
    "metadata": {
     "slideshow": {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "professional-astrology",
    "metadata": {
     "slideshow": {
@@ -607,7 +607,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60.6 µs ± 10 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "81.5 µs ± 22.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "fitted-foster",
    "metadata": {
     "slideshow": {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 19,
    "id": "national-transcript",
    "metadata": {
     "slideshow": {
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 20,
    "id": "tutorial-senegal",
    "metadata": {
     "slideshow": {
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 21,
    "id": "outdoor-october",
    "metadata": {
     "slideshow": {
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 22,
    "id": "honey-indiana",
    "metadata": {
     "slideshow": {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 23,
    "id": "running-shuttle",
    "metadata": {
     "slideshow": {
@@ -1067,7 +1067,7 @@
        "Name: car, dtype: float64"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 24,
    "id": "harmful-carry",
    "metadata": {
     "slideshow": {
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 25,
    "id": "apparent-complexity",
    "metadata": {
     "slideshow": {
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 26,
    "id": "colored-genetics",
    "metadata": {
     "slideshow": {
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "weird-mambo",
    "metadata": {
     "slideshow": {
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "id": "opponent-pickup",
    "metadata": {
     "slideshow": {
@@ -1626,7 +1626,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ttest_indResult(statistic=1.7520382806027044, pvalue=0.0807957942100424)\n"
+      "Ttest_indResult(statistic=3.0534915360662302, pvalue=0.002466107899967792)\n"
      ]
     }
    ],
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "id": "fresh-brooks",
    "metadata": {
     "slideshow": {
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "experienced-vacation",
    "metadata": {
     "slideshow": {
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "alike-breed",
    "metadata": {
     "slideshow": {
@@ -1925,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 14,
    "id": "egyptian-gasoline",
    "metadata": {
     "slideshow": {
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 15,
    "id": "touched-david",
    "metadata": {
     "slideshow": {
@@ -1970,7 +1970,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "162 µs ± 6.48 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "182 µs ± 69.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 16,
    "id": "likely-access",
    "metadata": {
     "slideshow": {
@@ -1997,7 +1997,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.99 µs ± 146 ns per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "14.6 µs ± 4.42 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 27,
    "id": "final-checklist",
    "metadata": {
     "slideshow": {
@@ -2519,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "id": "dried-laugh",
    "metadata": {
     "slideshow": {
@@ -2583,7 +2583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
