--- a/3_functions_and_classes.ipynb
+++ b/3_functions_and_classes.ipynb
@@ -10,12 +10,12 @@
    },
    "source": [
     "<figure>\n",
-    "  <IMG SRC=\"input/TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
+    "  <IMG SRC=\"input/FAU.png\" WIDTH=250 ALIGN=\"right\">\n",
     "</figure>\n",
     "\n",
     "# Functions and Classes in Python 3\n",
     "    \n",
-    "*David B. Blumenthal, Olga Lazareva*"
+    "*David B. Blumenthal, Suryadipto Sarkar*"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "amino-legend",
    "metadata": {
     "slideshow": {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "developing-affairs",
    "metadata": {
     "slideshow": {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "numerical-pharmacology",
    "metadata": {
     "slideshow": {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "palestinian-threshold",
    "metadata": {
     "slideshow": {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "trained-baker",
    "metadata": {
     "slideshow": {
@@ -270,7 +270,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-59-e9a295336f4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mfactorial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfact\u001b[0m\u001b[0;34m)\u001b[0m                 \u001b[0;31m# This produces an error.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m! = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfact\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;66;03m# This works, too.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m factorial(\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfact\u001b[49m)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'fact' is not defined"
      ]
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "id": "focal-aluminum",
    "metadata": {
     "slideshow": {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "id": "incorporate-occasions",
    "metadata": {
     "slideshow": {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "id": "loved-driver",
    "metadata": {
     "slideshow": {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "id": "olympic-natural",
    "metadata": {
     "slideshow": {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "brazilian-phrase",
    "metadata": {
     "slideshow": {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "naval-workstation",
    "metadata": {
     "slideshow": {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "id": "enhanced-ecuador",
    "metadata": {
     "slideshow": {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "id": "favorite-preference",
    "metadata": {},
    "outputs": [
@@ -730,13 +730,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 32,
    "id": "arbitrary-science",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Date(object):\n",
-    "    \n",
     "    \n",
     "    # Two static variables.\n",
     "    month_name_to_number = {'January': 1, 'February': 2, 'March': 3, 'April': 4, 'May': 5, 'June': 6, 'July': 7, \n",
@@ -756,7 +755,7 @@
     "            return number\n",
     "        else:\n",
     "            print(f'WARNING: Invalid month {month}.')\n",
-    "    \n",
+    "            \n",
     "    def __init__(self, day, month, year):\n",
     "        self.day = day       \n",
     "        self.month = month   \n",
@@ -780,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 33,
    "id": "qualified-layout",
    "metadata": {
     "slideshow": {
@@ -875,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "id": "guilty-insurance",
    "metadata": {
     "slideshow": {
@@ -923,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "leading-mumbai",
    "metadata": {
     "slideshow": {
@@ -994,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 34,
    "id": "realistic-alliance",
    "metadata": {
     "slideshow": {
@@ -1116,7 +1115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
