--- a/0_overview.ipynb
+++ b/0_overview.ipynb
@@ -10,12 +10,12 @@
    },
    "source": [
     "<figure>\n",
-    "  <IMG SRC=\"input/TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
+    "  <IMG SRC=\"input/FAU.png\" WIDTH=250 ALIGN=\"right\">\n",
     "</figure>\n",
     "\n",
     "# Introduction to Python for Bioinformatics\n",
     "    \n",
-    "*David B. Blumenthal, Olga Lazareva*"
+    "*David B. Blumenthal, Suryadipto Sarkar*"
    ]
   },
   {
@@ -193,6 +193,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "55140cae",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### `7_image_classification_using_keras.ipynb`\n",
+    "\n",
+    "- Get a first glimpse at how to classify images with deep learning approaches."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "olive-stereo",
    "metadata": {
     "slideshow": {
@@ -226,17 +240,52 @@
     "## What we expect of you\n",
     "\n",
     "- Please always try to solve the exercises **without looking at the solutions** given at the bottom of the Notebooks.\n",
-    "- This is the first time we are giving this course, so please **give us feedback**.\n",
     "- If you have questions, **ask them immediately**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "058a2536",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "---\n",
+    "## Grading\n",
+    "\n",
+    "- At the end of the course, you will be able to select from a couple of small toy projects.\n",
+    "- Implement your own Jupyter notebook to solve the project and send it to us for grading.\n",
+    "- You will be graded based on two criteria:\n",
+    "  - Do the notebooks run bug-free?\n",
+    "  - Tidyness and readibility of the code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c09dc0c0",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "---\n",
+    "## Plagiarism\n",
+    "\n",
+    "- Even if >= 2 of you pick the same project, you are expected to solve it independently.\n",
+    "- **If we detect plagiarism, we will have to let you fail.**\n",
+    "- That would be very stupid, because otherwise failing this course will be very difficult."
    ]
   }
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python-intro",
    "language": "python",
-   "name": "python3"
+   "name": "python-intro"
   },
   "language_info": {
    "codemirror_mode": {
@@ -248,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
