improved first steps

--- a/0_overview.ipynb
+++ b/0_overview.ipynb
@@ -68,7 +68,7 @@
    },
    "source": [
     "---\n",
-    "## Some advantages of Python\n",
+    "## Some advantages of Python (I)\n",
     "\n",
     "- Very **easy syntax**.\n",
     "- **Multi-purpose** programming language.\n",
@@ -77,7 +77,18 @@
     "  - Data handling.\n",
     "  - Statistics.\n",
     "  - Machine learning.\n",
-    "  - Plotting.\n",
+    "  - Plotting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8aa1b6dd",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "- Many packages have **very efficient C, C++, or Fortran backends**. \n",
     "- $\\Longrightarrow$ Well-designed Python code is often not only **easy to read**, but also **fast**."
    ]
@@ -100,7 +111,7 @@
    "id": "clean-ordering",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -297,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
