--- a/1_first_steps.ipynb
+++ b/1_first_steps.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "growing-newport",
    "metadata": {
     "slideshow": {
@@ -193,21 +193,51 @@
    },
    "source": [
     "---\n",
-    "## Data types in Python\n",
-    "\n",
+    "## Data types in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4db8acce",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Everything is an object\n",
     "\n",
     "- Every value in Python has a **data type**.\n",
     "- Everything is an **object** in Python.\n",
-    "- $\\Longrightarrow$ **Types are classes** and **variables are objects** instantiating them.\n",
-    "\n",
+    "- $\\Longrightarrow$ **Types are classes** and **variables are objects** instantiating them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cbe4e69",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Some important data types\n",
     "\n",
     "- **Numbers**: `int`, `float`, `complex`.\n",
     "- **Strings**: `str`.\n",
     "- **Booleans**: `bool`.\n",
-    "- **Containers**: `list`, `tuple`, `set`, `dict`.\n",
-    "\n",
+    "- **Containers**: `list`, `tuple`, `set`, `dict`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "052c6916",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Dynamic typing\n",
     "\n",
     "Python is **dynamically typed**, which means that:\n",
@@ -222,7 +252,7 @@
    "id": "instructional-shannon",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -270,7 +300,7 @@
    "id": "behavioral-partition",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -310,8 +340,18 @@
     "double_quote_string = \"I am also a string.\"\n",
     "```\n",
     "\n",
-    "- Strings constructed via **single quotes** and **double quotes** are equivalent, just **be consistent**.\n",
-    "\n",
+    "- Strings constructed via **single quotes** and **double quotes** are equivalent, just **be consistent**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3901dd0a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Formatted strings (f-Strings)"
    ]
   },
@@ -354,11 +394,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "effective-compensation",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -412,7 +452,7 @@
    "id": "passing-cooperation",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -542,18 +582,28 @@
     "l = [4, 'Apple', True]\n",
     "```\n",
     "\n",
-    "- Lists are **mutable**.\n",
-    "\n",
+    "- Lists are **mutable**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9def7847",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Most important list operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "computational-serum",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -603,8 +653,18 @@
     "\n",
     "```python\n",
     "t = (4, 'Apple', True)\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71ab4975",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Most important tuple operations (similar to list operations)"
    ]
   },
@@ -614,7 +674,7 @@
    "id": "extra-change",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -701,19 +761,29 @@
     "```\n",
     "\n",
     "- **Keys** must be hashable – usually `int` or `str`.\n",
-    "- **Values** can be of any type.\n",
-    "\n",
+    "- **Values** can be of any type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "284f6e22",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Most important dictionary operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "cognitive-example",
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -729,7 +799,6 @@
       "dict_values(['john', 6734])\n",
       "dict_items([('name', 'john'), ('code', 6734)])\n",
       "False\n",
-      "True\n",
       "{'one': 'This is one', 2: 'This is 2'}\n"
      ]
     }
@@ -747,7 +816,6 @@
     "print(d_2.values())                  # Get all the values.\n",
     "print(d_2.items())                   # Get all the key-value pairs as tuples.\n",
     "print('key' in d_1)                  # Check if dict has key 'key'.\n",
-    "print(2 in d_1)                      # Check if dict has key 2.\n",
     "d_1[2] = 'This is 2'                 # Update value for existing key.\n",
     "print(d_1)                           # Print updated dict."
    ]
@@ -861,18 +929,28 @@
     "```python\n",
     "for elem in iterator:\n",
     "    # do something\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f98f66f",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Iterating through lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "likely-visibility",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -917,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "knowing-instrument",
    "metadata": {
     "slideshow": {
@@ -970,11 +1048,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "pressed-weight",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1014,7 +1092,7 @@
    "id": "joined-lighter",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1037,6 +1115,162 @@
     "# Iterate trough key-value pairs.\n",
     "for key, value in d_1.items():\n",
     "    print(f'The value for key {key} in d_1 is {value}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecd46ce2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### The `itertools` package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "91e44a08",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import itertools as itt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28eaeb9d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Iterating over Cartesian products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3fef8fbb",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num=1,char=a\n",
+      "num=1,char=b\n",
+      "num=1,char=c\n",
+      "num=2,char=a\n",
+      "num=2,char=b\n",
+      "num=2,char=c\n",
+      "num=3,char=a\n",
+      "num=3,char=b\n",
+      "num=3,char=c\n",
+      "num=4,char=a\n",
+      "num=4,char=b\n",
+      "num=4,char=c\n",
+      "num=5,char=a\n",
+      "num=5,char=b\n",
+      "num=5,char=c\n"
+     ]
+    }
+   ],
+   "source": [
+    "l_1 = [1,2,3,4,5]\n",
+    "l_2 = ['a','b','c']\n",
+    "for num, char in itt.product(l_1, l_2):\n",
+    "    print(f'num={num},char={char}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b76394",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Iterating over permutations of given size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d58e2292",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "char_1=a,char_2=b\n",
+      "char_1=a,char_2=c\n",
+      "char_1=b,char_2=a\n",
+      "char_1=b,char_2=c\n",
+      "char_1=c,char_2=a\n",
+      "char_1=c,char_2=b\n"
+     ]
+    }
+   ],
+   "source": [
+    "l_2 = ['a','b','c']\n",
+    "for char_1, char_2 in itt.permutations(l_2, 2):\n",
+    "    print(f'char_1={char_1},char_2={char_2}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5bb1118",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Iterating over combinations without replacement (sets) of given size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f4fee79e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "char_1=a,char_2=b\n",
+      "char_1=a,char_2=c\n",
+      "char_1=b,char_2=c\n"
+     ]
+    }
+   ],
+   "source": [
+    "l_2 = ['a','b','c']\n",
+    "for char_1, char_2 in itt.combinations(l_2, 2):\n",
+    "    print(f'char_1={char_1},char_2={char_2}')"
    ]
   },
   {
@@ -1092,7 +1326,18 @@
     "## `break` and `continue`\n",
     "\n",
     "- With `break`, you exit the current loop.\n",
-    "- With `continue`, you fast-forward to the next iteration of the current loop.\n",
+    "- With `continue`, you fast-forward to the next iteration of the current loop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f45ece4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "\n",
     "### Sum up all non-negative entries of a list using `continue`"
    ]
@@ -1103,7 +1348,7 @@
    "id": "tribal-desktop",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1143,7 +1388,7 @@
    "id": "given-portland",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1181,8 +1426,18 @@
     "```python\n",
     "while condition:\n",
     "    # do something\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24d9ca87",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Find index of first occurence of element in list"
    ]
   },
@@ -1192,7 +1447,7 @@
    "id": "dominant-elements",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1273,8 +1528,18 @@
     "- Construct lists, dictionaries, or sets via `for`-loops in just one line.\n",
     "- **Syntax for lists:** `l = [EXPRESSION for item in iterable if CONDITION]`\n",
     "- **Syntax for dictionaries:** `l = {KEY_EXPRESSION: VALUE_EXPRESSION for item in iterable if CONDITION}`\n",
-    "- **Syntax for sets:** `l = {EXPRESSION for item in iterable if CONDITION}`\n",
-    "\n",
+    "- **Syntax for sets:** `l = {EXPRESSION for item in iterable if CONDITION}`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9699a3d6",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Examples"
    ]
   },
@@ -1284,7 +1549,7 @@
    "id": "trying-meeting",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1326,8 +1591,18 @@
     "with open(filename, 'r') as fp: # Open file for reading and automatically close it at end of with-scope.\n",
     "    for line in fp:             # Iterate through the lines of the file.\n",
     "        pass                    # The keyword \"pass\" is a placeholder that does nothing.\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe480dad",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### A rudimentary parser using `string.split()` , `string.strip()`, and `string.join()`\n",
     "\n",
     "- Create a **dictionary** which contains the **line numbers as keys** and a **list of words in the respective lines as values** (words are defined as white-space separated tokens).\n",
@@ -1343,7 +1618,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -1387,7 +1662,7 @@
    "id": "automatic-shadow",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -1808,7 +2083,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
