--- a/7_image_classification_using_keras.ipynb
+++ b/7_image_classification_using_keras.ipynb
@@ -7,9 +7,9 @@
     "id": "consolidated-orlando"
    },
    "source": [
-    "<figure>\n",
+    "<!--figure>\n",
     "  <IMG SRC=\"input/FAU.png\" WIDTH=250 ALIGN=\"right\">\n",
-    "</figure>\n",
+    "</figure-->\n",
     "\n",
     "# Image Classification with Keras\n",
     "    \n",
